img vertical-align: bottom to fix invisible margin bottom

--- a/public/theme/base.css
+++ b/public/theme/base.css
@@ -142,6 +142,10 @@ video {
     max-width: 100%;
 }
 
+img {
+    vertical-align: bottom;
+}
+
 audio,
 canvas,
 video {
